# jarvis-notifications

./: .coverage  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.dev.yaml  docker-compose.prod.yaml  pyproject.toml  run.sh
.github/workflows/: docker-build-push.yml  test.yml
alembic/: env.py
alembic/versions/: 001_initial.py  002_inbox_items.py
app/: config.py  db.py  deps.py  main.py  models.py
app/api/: admin.py  inbox.py  notify.py  tokens.py
app/core/: service_config.py
app/services/: account_service.py  cleanup_service.py  inbox_service.py  notification_service.py  token_service.py
jarvis_notifications.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_account_purge.py  test_admin.py  test_cleanup.py  test_config_security.py  test_inbox_bulk.py  test_inbox_idor.py  test_notification_service.py  test_notify.py  test_tokens.py
