[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-notifications"
version = "0.1.0"
description = "Push notification service for the Jarvis ecosystem"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "httpx",
    "python-dotenv",
    "python-jose[cryptography]",
    "sqlalchemy>=2.0",
    "alembic",
    "psycopg2-binary",
    "jarvis-log-client @ git+https://github.com/alexberardi/jarvis-log-client.git@c2f8e82",
    "jarvis-config-client @ git+https://github.com/alexberardi/jarvis-config-client.git@c1c8903",
    "jarvis-auth-client @ git+https://github.com/alexberardi/jarvis-auth-client.git@4549b23",
    "jarvis-settings-client @ git+https://github.com/alexberardi/jarvis-settings-client.git@9902feb",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.21.0",
    "pytest-cov>=4.1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
